
      \item \code{indMatrix} no longer extends virtual class
      \code{compMatrix} and so no longer inherits a (never used)
      \code{factors} slot.
      Objects serialized under \pkg{Matrix} \code{< 1.7-0} and
      unserialized under \pkg{Matrix} \code{>= 1.7-0} remain valid,
      retaining a harmless \code{factors} \emph{attribute}.
    }
  }
  \subsection{New Features}{
    \itemize{
      \item CHOLMOD component Partition is now compiled along with
      its dependencies (METIS, CAMD, CCOLAMD).

      \item CXSparse is now compiled instead of CSparse, which did
      not support complex matrices.
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item CHOLMOD sources are patched to address the significant
      number of compiler warnings surfaced by \option{-Wall}.

      \item The unary subscript \code{x[i]} is correct again for
      \code{x} of class \code{.s[CT]Matrix} and logical \code{i}
      indexing entries outside of the stored triangle.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item .
    }
  }
}

\section{Changes in version 1.6-5 (2024-01-06 r4560)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{x[]} works for \code{x} inheriting from virtual class
      \code{sparseVector}.

      \item \code{length(x)} is always an integer for \code{x}
      inheriting from virtual class \code{sparseVector}.  Truncation
      did not occur for \code{x@length} of type \code{"double"}
      equal to or greater than \code{.Machine[["integer.max"]] + 1}.

      \item \code{tril(<n-by-n>, -n)} now works again.

      \item \code{tri[ul](<indMatrix>, k)} now works correctly for
      \code{k != 0}.

      \item \proglang{C} API function \code{cholmod_triplet_as_sexp}
      transposes entries \dQuote{opposite} the \code{stype} when that
      is nonzero, following CHOLMOD.

      \item \code{R_init_Matrix} did not register \code{cholmod_defaults},
      so calls to the corresponding stub did not work.
    }
  }
  \subsection{Misc}{